# circuit_solver

./: .gitignore  CMakeLists.txt  algorithms.cpp  algorithms.hpp  bipoles.cpp  bipoles.hpp  kclsolve_disass.txt  main.cpp  mainwindow.cpp  mainwindow.h  output.txt
